src/objects/TR1__Timesheet_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CRS_Name__c</fullName>
        <label>CRS Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Status__c</fullName>
        <description>Pulls Cancelled or Booked Status from the corresponding CRS</description>
        <formula>TEXT( Closing_Report_Schedule__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRS Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Report_Id__c</fullName>
        <formula>CASESAFEID(TR1__Timesheet__r.TR1__Closing_Report__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Report Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Report_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report Schedule</label>
        <referenceTo>Closing_Report_Schedule__c</referenceTo>
        <relationshipLabel>Timesheet Details</relationshipLabel>
        <relationshipName>Timesheet_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DayShift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_Charge_Rate_Hidden__c</fullName>
        <formula>TR1__Timesheet__r.TR1__Closing_Report__r.Maximum_Day_Charge_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Charge Rate Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day_Charge_Rate_Legacy__c</fullName>
        <label>Day Charge Rate Legacy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day_Pay_Rate_Hidden__c</fullName>
        <formula>TR1__Timesheet__r.TR1__Closing_Report__r.Maximum_Day_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Pay Rate (Hidden)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day_Pay_Rate_Legacy__c</fullName>
        <label>Day Pay Rate Legacy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half_Day_Charge_Rate_Hidden__c</fullName>
        <formula>TR1__Timesheet__r.TR1__Closing_Report__r.Maximum_Half_Day_Charge_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Half Day Charge Rate Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Half_Day_Charge_Rate_Legacy__c</fullName>
        <label>Half Day Charge Rate Legacy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Half_Day_Pay_Rate_Hidden__c</fullName>
        <formula>TR1__Timesheet__r.TR1__Closing_Report__r.Maximum_Half_Day_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Half Day Pay Rate Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Half_Day_Pay_Rate_Legacy__c</fullName>
        <label>Half Day Pay Rate Legacy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Half_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Half Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hour_Charge_Date_Legacy__c</fullName>
        <label>Hour Charge Date Legacy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hour_Pay_Rate_Legacy__c</fullName>
        <label>Hour Pay Rate Legacy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Charge_Rate_Hidden__c</fullName>
        <formula>TR1__Timesheet__r.TR1__Closing_Report__r.Maximum_Hour_Charge_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly Charge Rate Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Pay_Rate_Hidden__c</fullName>
        <formula>TR1__Timesheet__r.TR1__Closing_Report__r.Maximum_Hour_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly Pay Rate Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Populated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Temp_Time_Sheet_Line_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Old Temp Time Sheet Line ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Populated_By__c</fullName>
        <label>Populated By</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Day__c</fullName>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Double_Time_Hours__c</fullName>
        <label>Double Time Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Expenses__c</fullName>
        <label>Expenses</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Overtime_Hours__c</fullName>
        <label>Overtime Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Regular_Hours__c</fullName>
        <label>Regular Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Sick_Time_Hours__c</fullName>
        <label>Sick Time Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipLabel>Timesheet Details</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__TotalShiftBillAmount__c</fullName>
        <label>Total Shift Bill Amount</label>
        <summarizedField>TR1__ShiftWork__c.TR1__AmountBill__c</summarizedField>
        <summaryForeignKey>TR1__ShiftWork__c.TR1__TimesheetDetail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__TotalShiftPayAmount__c</fullName>
        <label>Total Shift Pay Amount</label>
        <summarizedField>TR1__ShiftWork__c.TR1__AmountPay__c</summarizedField>
        <summaryForeignKey>TR1__ShiftWork__c.TR1__TimesheetDetail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__TotalShiftUnits__c</fullName>
        <label>Total Shift Units</label>
        <summarizedField>TR1__ShiftWork__c.TR1__Units__c</summarizedField>
        <summaryForeignKey>TR1__ShiftWork__c.TR1__TimesheetDetail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Fee__c</fullName>
        <label>Total Fee</label>
        <summarizedField>TR1__ShiftWork__c.TR1__Total_Fee__c</summarizedField>
        <summaryForeignKey>TR1__ShiftWork__c.TR1__TimesheetDetail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Shift_Hours__c</fullName>
        <label>Total Shift Hours</label>
        <summarizedField>TR1__ShiftWork__c.TR1__Hours__c</summarizedField>
        <summaryForeignKey>TR1__ShiftWork__c.TR1__TimesheetDetail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Travel_Hours__c</fullName>
        <label>Travel Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Vacation_Hours__c</fullName>
        <label>Vacation Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>TR1__Regular_Hours__c + TR1__Overtime_Hours__c + TR1__Double_Time_Hours__c + TR1__Vacation_Hours__c + TR1__Sick_Time_Hours__c + TR1__Travel_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Day_Hidden__c</fullName>
        <formula>TR1__Timesheet__r.TR1__Closing_Report__r.Trial_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Day? Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Units_Populated__c</fullName>
        <formula>IF(

OR( DayShift__c =TRUE,
    Half_Day__c=TRUE,
    TR1__Regular_Hours__c &gt;0),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units Populated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Timesheet Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TS-{MM}{DD}{YY}-{0}</displayFormat>
        <label>Timesheet Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Daily_Rate_Required_for_Daily_Shift</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
Trial_Day_Hidden__c = FALSE, 
DayShift__c = TRUE,

OR(
ISBLANK(Day_Charge_Rate_Hidden__c),
Day_Charge_Rate_Hidden__c = 0 ),

OR(
ISBLANK(Day_Pay_Rate_Hidden__c),
Day_Pay_Rate_Hidden__c = 0 )
)</errorConditionFormula>
        <errorMessage>A Daily Pay or Charge rate must be entered on Closing Report to add a Day shift to Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exported_Timesheets_cannot_be_edited</fullName>
        <active>true</active>
        <description>Only payroll can edit exported timesheets</description>
        <errorConditionFormula>NOT(ISBLANK(TR1__Timesheet__r.Timesheet_Export_Line_Item__c))
&amp;&amp;
OR(
NOT($User.ProfileId &lt;&gt; &quot;00e58000000IhIW&quot;/*Payroll Officer*/),
NOT($User.ProfileId &lt;&gt; &quot;00e58000000IhIR&quot;/*Talent Rover Administrator*/))</errorConditionFormula>
        <errorMessage>You cannot edit a timesheet once it has been exported to Merit. Please contact payroll@supplydesk.co.uk for assistance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Half_Day_Rate_Req_for_Half_Day_Shift</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Trial_Day_Hidden__c = FALSE, 
Half_Day__c  = TRUE, 

OR( 
ISBLANK(Half_Day_Pay_Rate_Hidden__c), 
Half_Day_Pay_Rate_Hidden__c = 0 ), 

OR( 
ISBLANK(Half_Day_Charge_Rate_Hidden__c), 
Half_Day_Charge_Rate_Hidden__c = 0 ) 
)</errorConditionFormula>
        <errorMessage>A Half Day Pay or Charge rate must be entered on Closing Report to add a Half Day shift to Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hourly_Rate_Required_for_Hourly_Shift</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Trial_Day_Hidden__c = FALSE, 
NOT(ISBLANK(TR1__Regular_Hours__c)), 

OR( 
ISBLANK( Hourly_Pay_Rate_Hidden__c ), 
 Hourly_Pay_Rate_Hidden__c  = 0 ), 

OR( 
ISBLANK( Hourly_Charge_Rate_Hidden__c ), 
 Hourly_Charge_Rate_Hidden__c  = 0 ) 
)</errorConditionFormula>
        <errorMessage>An Hourly Pay or Charge rate must be entered on Closing Report to add hours to Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VacationHours</fullName>
        <active>true</active>
        <description>Vacation hours either should be 4 or 8</description>
        <errorConditionFormula>TR1__Vacation_Hours__c &lt;&gt; 0.00 &amp;&amp; TR1__Vacation_Hours__c &lt;&gt; 4.00 &amp;&amp; TR1__Vacation_Hours__c &lt;&gt; 8.00</errorConditionFormula>
        <errorMessage>Vacation hours either should be 4 or 8</errorMessage>
    </validationRules>
</CustomObject>